[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/TitleScreen/exit button.png" type="Texture" id=1]
[ext_resource path="res://sprites/TitleScreen/gettin' dicey.png" type="Texture" id=2]
[ext_resource path="res://sprites/TitleScreen/play button.png" type="Texture" id=3]
[ext_resource path="res://scripts/Title_Screen.gd" type="Script" id=4]
[ext_resource path="res://sprites/TitleScreen/fullscreen.png" type="Texture" id=5]
[ext_resource path="res://sprites/TitleScreen/minimize.png" type="Texture" id=6]
[ext_resource path="res://sprites/TitleScreen/volume slider.png" type="Texture" id=7]
[ext_resource path="res://sprites/TitleScreen/volume button.png" type="Texture" id=8]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Title" type="TextureRect" parent="."]
margin_left = 122.0
margin_top = 60.0
margin_right = 518.0
margin_bottom = 106.0
texture = ExtResource( 2 )

[node name="StartButton" type="Button" parent="."]
margin_left = 232.0
margin_top = 190.0
margin_right = 407.0
margin_bottom = 244.0
icon = ExtResource( 3 )
flat = true

[node name="ExitButton" type="Button" parent="."]
margin_left = 232.0
margin_top = 255.0
margin_right = 409.0
margin_bottom = 309.0
icon = ExtResource( 1 )
flat = true

[node name="Minimize" type="Button" parent="."]
margin_left = 122.0
margin_top = 285.0
margin_right = 186.0
margin_bottom = 319.0
icon = ExtResource( 6 )
flat = true

[node name="Maximize" type="Button" parent="."]
margin_left = 40.0
margin_top = 285.0
margin_right = 104.0
margin_bottom = 319.0
icon = ExtResource( 5 )
flat = true

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 456.0
margin_top = 280.5
margin_right = 604.0
margin_bottom = 320.5
texture = ExtResource( 7 )

[node name="TextureRect3" type="TextureRect" parent="."]
margin_left = 496.0
margin_top = 285.0
margin_right = 512.0
margin_bottom = 301.0
texture = ExtResource( 8 )

[node name="HSlider" type="HSlider" parent="."]
margin_left = 472.0
margin_top = 240.0
margin_right = 568.0
margin_bottom = 256.0

[connection signal="button_up" from="StartButton" to="." method="_on_StartButton_button_up"]
[connection signal="button_up" from="ExitButton" to="." method="_on_ExitButton_button_up"]
[connection signal="button_up" from="Minimize" to="." method="_on_Minimize_button_up"]
[connection signal="button_up" from="Maximize" to="." method="_on_Maximize_button_up"]
